Use "java.util.Set.of()" instead.
Java features should be preferred to Guava (java:S4738)